--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,36 +14,34 @@
         android:id="@+id/numberOnScreen"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".9"
+        android:layout_weight=".85"
         android:text="9"
-        android:textSize="250sp"
+        android:textSize="160sp"
         android:gravity="center_horizontal|center_vertical"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".1"
+        android:layout_weight=".15"
         android:orientation="horizontal"
+        android:gravity="center_horizontal|center_vertical"
         android:padding="0dp" >
 
         <Button
             android:layout_margin="0dp"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight=".30"
             android:text="@string/less_text"
             android:id="@+id/lessBtn"
             style="@style/ChoiceButton" />
         <Button
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight=".30"
             android:text="@string/equal_text"
             android:id="@+id/equalBtn"
             style="@style/ChoiceButton" />
         <Button
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight=".30"
             android:text="@string/greater_text"
             android:id="@+id/greaterBtn"
